# bossnet-89d5c

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.production  LICENSE  Makefile  README.md  TODO.md  alembic.ini  dbt_project.yml  docker-compose.redis.yml  docker-compose.yml  dvc.yaml  environment.yml  mkdocs.yml  netlify.toml  next.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  requirements-dev.txt  requirements-security.txt  requirements.txt  run_api.py  setup.cfg  setup.py  setup_dev_environment.sh  tsconfig.json
.github/: pull_request_template.md
.github/workflows/: main.yml
.next/: BUILD_ID  app-build-manifest.json  images-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  react-loadable-manifest.json  required-server-files.json  routes-manifest.json  trace
.next/cache/: .rscinfo
.next/diagnostics/: framework.json
.next/server/: middleware-build-manifest.js  middleware-react-loadable-manifest.js  server-reference-manifest.json  webpack-runtime.js
alembic/versions/: 20240501_create_core_tables.py  20250605_create_core_tables.py  initial_migration.py
app/: layout.tsx  page.tsx
components/ui/: use-toast.ts
config/: example.yaml
config/i18n/: bn.yaml  en.yaml
dags/: student_performance_etl.py
dashboards/: Dockerfile  requirements.txt
dashboards/demographic_insights/: app.py
dashboards/enrollment_trends/: app.py  data_service.py  requirements.txt  visualization_service.py
dashboards/student_performance/: README.md  app.py  data_service.py  visualization_service.py
database/: README.md  init.sql  init_db.py  test_connection.py
deploy/: deploy.sh  docker-compose.prod.yml  docker-entrypoint.sh
deploy/environments/: development.env  production.env
deploy/kubernetes/: app-deployment.yaml  cluster-autoscaler.yaml  configmap.yaml  db-deployment.yaml  hpa.yaml  ingress.yaml  metrics-server.yaml  monitoring.yaml  namespace.yaml  network-policy.yaml  redis-deployment.yaml  secrets.yaml
deploy/logging/: elasticsearch.yaml  filebeat.yaml  kibana.yaml  logstash.yaml
deploy/monitoring/: alertmanager-config.yaml  grafana-dashboards.yml  prometheus-config.yaml  prometheus.yml
docs/: deployment.md  index.md  quickstart.md  security.md
docs/api_documentation/: README.md
docs/data_dictionary/: README.md
docs/data_ethics/: compliance_guidelines.md  de_identification_strategies.md  privacy_risks.md
docs/security/: SECURITY.md
docs/technical_specs/: README.md
docs/user_guides/: README.md  getting_started.md
infrastructure/terraform/: main.tf  outputs.tf  variables.tf
migrations/: env.py
migrations/versions/: 20250105_001_create_complete_schema.py
mlflow/: README.md
model_registry/student_dropout/: README.md
models/: README.md  schema.yml
models/dimensions/: dim_geography.sql  dim_schools.sql  dim_students.sql  dim_teachers.sql  dim_time.sql
models/equity_metrics/: gender_gap_model.py  regional_disparity_index.py
models/facts/: fct_assessment_results.sql  fct_attendances.sql  fct_enrollments.sql
models/staging/: stg_students.sql
notebooks/: 01_data_cleaning.ipynb  02_exploratory_analysis.ipynb  03_performance_analysis.ipynb  04_regional_analysis.ipynb  05_predictive_analytics.ipynb  README.md
notebooks/demographic_analysis/: 01_demographic_factors_analysis.ipynb  demographic_analysis.ipynb
notebooks/exploratory_analysis/: 01_data_overview.ipynb  01_data_processing_example.ipynb
notebooks/performance_metrics/: 01_academic_performance_analysis.ipynb
notebooks/predictive_models/: 01_performance_prediction.ipynb
notebooks/trend_analysis/: 01_longitudinal_trends.ipynb
scripts/: dashboard_health_check.py  db.py  deploy.sh  init_db.py  launch_all.sh  launch_all_dashboards.py  launch_demographics_dashboard.py  launch_enrollment_dashboard.py  launch_performance_dashboard.py  seed_data.py  setup_redis.py  start_redis.sh
security/: security_config.py
sql/migrations/: 001_create_students_table.sql  002_create_schools_table.sql  003_create_enrollments_table.sql  004_add_relationships.sql  005_add_constraints.sql
sql/queries/: analytics.sql  enrollment_trends.sql  school_performance.sql  student_aggregations.sql
sql/schema/: constraints.sql  erd_dbdiagram.txt  lookup_tables.sql  relationships.sql  tables.sql
src/: __init__.py  config.py  main.py
src/api/: README.md  api_service.py  main.py
src/auth/: __init__.py  dependencies.py  email_service.py  models.py  service.py
tests/: conftest.py  test_auth.py  test_data_processing.py  test_integration_api.py  test_users.py
(+252 files in other folders)
